Update notes: adding theme to the ulauncher

--- a/ulauncher/.config/ulauncher/settings.json
+++ b/ulauncher/.config/ulauncher/settings.json
@@ -8,5 +8,5 @@
     "show-indicator-icon": true,
     "show-recent-apps": "5",
     "terminal-command": "",
-    "theme-name": "adwaita"
+    "theme-name": "Essential-Dark-Theme"
 }
