--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -1,3 +1,13 @@
+// ***************************************************************************
+// *                                                                         *
+// *   This is the custom Fastfetch config designed with ❤️ by               *
+// *                           Abhiman G S                                  *
+// *                                                                         *
+// *   GitHub: abhimangs                                                     *
+// *   Contact: theabhimangs@gmail.com                                       *
+// *                                                                         *
+// ***************************************************************************
+
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "display": {
@@ -6,8 +16,8 @@
   "modules": [
     {
       "type": "custom",
-      "format": "┌──────────────────────────────────────────┐"
-    },
+      "format": "\u001b[1;35m┌──────────── Software Information ───────────┐\u001b[0m"
+    },    
     {
       "type": "title",
       "key": "  ",
@@ -16,7 +26,7 @@
     {
       "type": "os",
       "key": "  󰣇 OS",
-      "format": "{2}",
+      "format": "{3}",
       "keyColor": "red"
     },
     {
@@ -48,14 +58,14 @@
     },
     {
       "type": "custom",
-      "format": "├──────────────────────────────────────────┤"
+      "format": "\u001b[1;35m├──────────── Hardware Information ───────────┤\u001b[0m"
     },
     {
       "type": "cpu",
-      "format": "{1} @ {7}",
+      "format": "{1}",
       "key": "   CPU",
       "keyColor": "blue"
-    },
+    },    
     {
       "type": "gpu",
       "format": "{1} {2}",
@@ -74,6 +84,10 @@
       "keyColor": "magenta"
     },
     {
+      "type": "custom",
+      "format": "\u001b[1;35m├─────────────────Uptime / Age────────────────┤\u001b[0m"
+    },
+    {
       "type": "command",
       "key": "  󱦟 OS Age ",
       "keyColor": "red",
@@ -86,16 +100,25 @@
     },
     {
       "type": "custom",
-      "format": "└──────────────────────────────────────────┘"
+      "format": "\u001b[1;35m└─────────────────────────────────────────────┘\u001b[0m"
     },
-//    {
-//      "type": "colors",
-//      "paddingLeft": 2,
-//      "symbol": "circle"
-//    },
     {
       "type": "custom",
-      "format": "\u001b[90m  \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m  \u001b[90m  \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m"
+      "format": "\u001b[1;31m┌─────────────────────────────────────────────┐\u001b[0m"
+    },
+    {
+      "type": "os",
+      "key": " ",
+      "format": "\u001b[1;31m           Warning - I use {4} btw\u001b[0m",
+      "keyColor": "red"
+    },
+    {
+      "type": "custom",
+      "format": "\u001b[1;31m└─────────────────────────────────────────────┘\u001b[0m"
+    },
+    {
+      "type": "custom",
+      "format": "\u001b[90m  \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m  \u001b[90m  \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m"
     },
     "break"
   ]
